thêm callback và nạp thẻ

--- a/public/config.json
+++ b/public/config.json
@@ -9,6 +9,7 @@
     "payment": {
         "atm": {
             "key": "VCB",
+            "nameStk": "Vietcombank",
             "stk": "1052147418",
             "name": "Nguyen Kim Hien"
         },
