--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@uploadcare/react-uploader": "^1.5.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.12.0",
+    "nanoid": "^5.1.2",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
