--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^3.12.0",
     "nanoid": "^5.1.2",
     "next": "15.1.7",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
