--- a/public/config.json
+++ b/public/config.json
@@ -26,7 +26,7 @@
     "download": [
         {
             "type": 0,
-            "link": "/imgs/ngocronglau.ipa",
+            "link": "/files/ngocronglau.ipa",
             "content": "Phiên bản dành cho iphone. <br/>- File .ipa"
         },
         {
