update link zalo

--- a/public/config.json
+++ b/public/config.json
@@ -11,7 +11,7 @@
         {
             "title": "Box Zalo",
             "text": "Tham nhóm zalo ngay",
-            "href": "https://zalo.me/g/zcaunk919"
+            "href": "https://zalo.me/g/qxwmlw978"
         }
     ],
     "payment": {
