--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ URL_API_CARD=trumthe.vn
 DOMAIN=https://nroaro.xyz/
 
 
-DB_NAME=hk
+DB_NAME=ngocrongz
 DB_PASSWORD=hienkoii189
 DB_USER=admin
-DB_HOST=103.178.235.218
+DB_HOST=103.77.173.89
 
 
 JWT_EXPIRES_IN=1h
