--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
-    "sweetalert2": "^11.17.2"
+    "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
