--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ URL_API_CARD=trumthe.vn
 DOMAIN=https://nroaro.xyz/
 
 
-DB_NAME=ngocrongz
+DB_NAME=nro
 DB_PASSWORD=hienkoii189
 DB_USER=admin
-DB_HOST=103.77.173.89
+DB_HOST=36.50.135.45
 
 
 JWT_EXPIRES_IN=1h
