tich hop nhieu web

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
+# client
+NEXT_PUBLIC_SITE_ID =lion
+# server
 ICONS_URL=https://icon.nroaro.xyz/nro_icons/
+
 TOKEN_ATM=851601caa8b57859fc0e8b61cdcb2a78
 SMTP_PASSWORD=izfy xhol cvvk xdzl
 SMTP_USER=hkdev180902@gmail.com
