--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # client
-NEXT_PUBLIC_SITE_ID =lion
+NEXT_PUBLIC_SITE_ID =pony
 # server
 ICONS_URL=https://icon.nroaro.xyz/nro_icons/
 
@@ -22,3 +22,10 @@ DB_HOST=36.50.135.45
 
 JWT_EXPIRES_IN=1h
 JWT_SECRET=hkdevfe
+
+
+NEXT_PUBLIC_IOS_IPA=/files/aro.ipa
+NEXT_PUBLIC_ANDROID_APK=/files/nroaro.apk
+NEXT_PUBLIC_WINDOWS_ZIP=/files/nroaro.rar
+NEXT_PUBLIC_JAVA_JAR=/files/DragonBoy230Prev1.7.jar
+NEXT_PUBLIC_IOS_TESTFLIGHT=https://testflight.apple.com/join/xxxx
