delete api icon

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # client
 NEXT_PUBLIC_SITE_ID =pony
 # server
-ICONS_URL=https://icon.nroaro.xyz/nro_icons/
+ICONS_URL=
 
 TOKEN_ATM=851601caa8b57859fc0e8b61cdcb2a78
 SMTP_PASSWORD=izfy xhol cvvk xdzl
@@ -27,5 +27,5 @@ JWT_SECRET=hkdevfe
 NEXT_PUBLIC_IOS_IPA=/files/aro.ipa
 NEXT_PUBLIC_ANDROID_APK=/files/nroaro.apk
 NEXT_PUBLIC_WINDOWS_ZIP=/files/nroaro.rar
-NEXT_PUBLIC_JAVA_JAR=/files/DragonBoy230Prev1.7.jar
+NEXT_PUBLIC_JAVA_JAR=https://www.mediafire.com/file/hmlcjxd8bdluzff/nroponynew.rar/file
 NEXT_PUBLIC_IOS_TESTFLIGHT=https://testflight.apple.com/join/xxxx
