--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # client
-NEXT_PUBLIC_SITE_ID =pony
+NEXT_PUBLIC_SITE_ID =lion
 # server
 ICONS_URL=
 
@@ -17,15 +17,15 @@ DOMAIN=https://nroaro.xyz/
 DB_NAME=nro
 DB_PASSWORD=hienkoii189
 DB_USER=admin
-DB_HOST=103.77.173.116
+DB_HOST=sv.nrolion.fun
 
 
 JWT_EXPIRES_IN=1h
 JWT_SECRET=hkdevfe
 
 
-NEXT_PUBLIC_IOS_IPA=/files/aro.ipa
-NEXT_PUBLIC_ANDROID_APK=/files/nroaro.apk
-NEXT_PUBLIC_WINDOWS_ZIP=/files/nroaro.rar
-NEXT_PUBLIC_JAVA_JAR=https://www.mediafire.com/file/hmlcjxd8bdluzff/nroponynew.rar/file
-NEXT_PUBLIC_IOS_TESTFLIGHT=https://testflight.apple.com/join/xxxx
+NEXT_PUBLIC_IOS_IPA=""
+NEXT_PUBLIC_ANDROID_APK=http://sv.nrolion.fun/nrolion.apk
+NEXT_PUBLIC_WINDOWS_ZIP=http://sv.nrolion.fun/nrolion.rar
+NEXT_PUBLIC_JAVA_JAR=""
+NEXT_PUBLIC_IOS_TESTFLIGHT=https://testflight.apple.com/join/Uq3uDPUV
