--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "25.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.7"
   }
