--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.33.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
@@ -27,6 +28,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
